# 2D-Structure-Formation-Simulator-Web

./: .gitignore  CMakeLists.txt  Structure_Formation.ini
.github/workflows/: build.yml
fft/: CMakeLists.txt
src/: colors.h  common.h  main.cpp  simulation.cpp  simulation.h
